--- a/app/globals.css
+++ b/app/globals.css
@@ -85,6 +85,44 @@ input[type=text] {
   align-items: center;
 }
 
+/* components/Loader.css */
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Adjust for container size */
+}
+
+.loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #4f46e5; /* Spinner color */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+.loader-background {
+  opacity: 0.5;
+  z-index: 9999;
+  position: fixed !important;
+  top: 20px;
+  left: 600px;
+}
+.loader-profile {
+  opacity: 0.5 9 !important;
+  z-index: 9999;
+  position: fixed !important;
+  top: 0;
+  left: 600px;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
